--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -2,42 +2,42 @@ org.nightlabs.jfire.base.app.JFireActionBuilder.loginStatus=login status
 
 org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.GroupDisallowsOverwrite=The group's settings don't allow the configuration to be edited.
 org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.loadingLabel=Loading...
-org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.fetchJobName=Fetch ConfigModule Information
+org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.fetchJobName=Fetching configuration module
 org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.WhetherGroupAllowsConfigOverwrite=Allow this configuration to be overwritten.
-org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.gettingModuleDataTask=Getting the Module data
-org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.editLockWarning=This ConfigModule is already opened by someone else\!
+org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.gettingModuleDataTask=Getting the module data
+org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.editLockWarning=This configuration module is already opened by someone else\!
 org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.noGroup=The config is in no group.
 org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.inheritFromGroup=Inherit the settings of this config module from its group?
 
-org.nightlabs.jfire.base.config.ChangedConfigModulePagesDialog.title=Changed Config Modules
+org.nightlabs.jfire.base.config.ChangedConfigModulePagesDialog.title=Changed configuration modules
 
-org.nightlabs.jfire.base.config.UserCSVisualiser.configGroupDescription=ConfigGroup %s
-org.nightlabs.jfire.base.config.UserCSVisualiser.userConfigDescription=Config for user %s
+org.nightlabs.jfire.base.config.UserCSVisualiser.configGroupDescription=Configuration group %s
+org.nightlabs.jfire.base.config.UserCSVisualiser.userConfigDescription=Configuration for user %s
 org.nightlabs.jfire.base.config.UserCSVisualiser.keyObjectName=%1$s (%2$s)
 
-org.nightlabs.jfire.base.config.WorkstationCSVisualiser.configGroupDescription=ConfigGroup %s
-org.nightlabs.jfire.base.config.WorkstationCSVisualiser.workstationConfigDescription=Config for workstation %s
+org.nightlabs.jfire.base.config.WorkstationCSVisualiser.configGroupDescription=Configuration group %s
+org.nightlabs.jfire.base.config.WorkstationCSVisualiser.workstationConfigDescription=Configuration for workstation %s
 
-org.nightlabs.jfire.base.config.ConfigPreferencesComposite.noPreferencePage=This ConfigModule has no PreferencePage registered to edit it\!
+org.nightlabs.jfire.base.config.ConfigPreferencesComposite.noPreferencePage=This Configuration module has no preference page registered to edit it\!
 
-org.nightlabs.jfire.base.config.ConfigPreferencesEditComposite2.updateingJob=Updating ConfigModule
-org.nightlabs.jfire.base.config.ConfigPreferencesEditComposite2.lockCheckJob=Checking for Locks
+org.nightlabs.jfire.base.config.ConfigPreferencesEditComposite2.updateingJob=Updating Configuration module
+org.nightlabs.jfire.base.config.ConfigPreferencesEditComposite2.lockCheckJob=Checking for locks
 org.nightlabs.jfire.base.config.ConfigPreferencesEditComposite2.initialising=Initialising...
-org.nightlabs.jfire.base.config.ConfigPreferencesEditComposite2.editLockWarning=This Config is currently edited by someone else\!
+org.nightlabs.jfire.base.config.ConfigPreferencesEditComposite2.editLockWarning=This configuration is currently edited by someone else\!
 
 org.nightlabs.jfire.base.entity.tree.ActiveJDOEntityTreeCategory.loadingData=Loading data...
 
 org.nightlabs.jfire.base.login.Login.authenticationJob=Authentication...
 org.nightlabs.jfire.base.login.Login.errorUnhandledExceptionMessage=An error occured while verifying login.
 org.nightlabs.jfire.base.login.Login.rebootDialogMessage=Your class loading configuration was changed in order to make all published server classes available. A restart is required.
-org.nightlabs.jfire.base.login.Login.rebootDialogTitle=Reboot Required
+org.nightlabs.jfire.base.login.Login.rebootDialogTitle=Reboot required
 
 org.nightlabs.jfire.base.login.LoginDialog.labellogin=Login
 org.nightlabs.jfire.base.login.LoginDialog.labeluser=Username: 
 org.nightlabs.jfire.base.login.LoginDialog.labelpass=Password: 
-org.nightlabs.jfire.base.login.LoginDialog.labelworkstation=Workstation:
-org.nightlabs.jfire.base.login.LoginDialog.titleAreaMessage=Enter your user data and press login - or choose to work offline
-org.nightlabs.jfire.base.login.LoginDialog.labelinitialContext=InitialContext Factory: 
+org.nightlabs.jfire.base.login.LoginDialog.labelworkstation=Workstation: 
+org.nightlabs.jfire.base.login.LoginDialog.titleAreaMessage=Enter your user data and press login - or choose to work offline.
+org.nightlabs.jfire.base.login.LoginDialog.labelinitialContext=Initial context factory: 
 org.nightlabs.jfire.base.login.LoginDialog.labelsaveSettings=&Save settings
 org.nightlabs.jfire.base.login.LoginDialog.labelbutton.login=&Login
 org.nightlabs.jfire.base.login.LoginDialog.deleteButtonLabel=Delete
@@ -47,20 +47,20 @@ org.nightlabs.jfire.base.login.LoginDialog.labelserverURL=Server URL:
 org.nightlabs.jfire.base.login.LoginDialog.authentication=Authentication...
 org.nightlabs.jfire.base.login.LoginDialog.titleAreaTitle=Please login
 org.nightlabs.jfire.base.login.LoginDialog.errormissingOrganisationID=You must specify an organisation.
-org.nightlabs.jfire.base.login.LoginDialog.errormissingContextFactory=You must specify an InitialContext Factory.
+org.nightlabs.jfire.base.login.LoginDialog.errormissingContextFactory=You must specify an initial context factory.
 org.nightlabs.jfire.base.login.LoginDialog.labelbutton.offline=Work &offline
 org.nightlabs.jfire.base.login.LoginDialog.errormissingUserID=You must specify an username.
-org.nightlabs.jfire.base.login.LoginDialog.errorSaveConfig=Saving config failed\!
+org.nightlabs.jfire.base.login.LoginDialog.errorSaveConfig=Saving configuration failed\!
 org.nightlabs.jfire.base.login.LoginDialog.errorAppend=\n%1$s: %2$s
 org.nightlabs.jfire.base.login.LoginDialog.errormissingServerURL=You must specify a server URL.
 org.nightlabs.jfire.base.login.LoginDialog.validNameMissingErrorMessage=You must specify a name if you want to save the login configuration.
 org.nightlabs.jfire.base.login.LoginDialog.loginConfigurationAlreadyExists=A login configuration with the given name already exists and will be overridden.
 org.nightlabs.jfire.base.login.LoginDialog.errorauthenticationFailed=Authentication failed.\nCheck username, password and organisation.
-org.nightlabs.jfire.base.login.LoginDialog.errorcommunicatinError=Communication error. Check server URL.\nErrormessage: %s 
+org.nightlabs.jfire.base.login.LoginDialog.errorcommunicatinError=Communication error. Check server URL.\nError message: %s 
 org.nightlabs.jfire.base.login.LoginDialog.errormissingWorkstationID=You must specify a workstation
 org.nightlabs.jfire.base.login.LoginDialog.currentIdentityMarker=[Latest login]
 org.nightlabs.jfire.base.login.LoginDialog.recentLoginsComboLabel=Recent Logins: 
-org.nightlabs.jfire.base.login.LoginDialog.identityNameTextLabel=Identity Name:
+org.nightlabs.jfire.base.login.LoginDialog.identityNameTextLabel=Identity Name: 
 
 org.nightlabs.jfire.base.login.LoginStateStatusLineContribution.loggedInStatus=%1$s@%2$s on %3$s
 org.nightlabs.jfire.base.login.LoginStateStatusLineContribution.loggedOutStatus=Logged out
@@ -70,48 +70,48 @@ org.nightlabs.jfire.base.login.part.NeedLoginComposite.login=Login
 org.nightlabs.jfire.base.login.part.NeedLoginComposite.loginToUseView=You need to login to use this view\!
 
 org.nightlabs.jfire.base.security.UserSearchDialog.Search=Search
-org.nightlabs.jfire.base.security.UserSearchDialog.SearchUser=Search User
+org.nightlabs.jfire.base.security.UserSearchDialog.SearchUser=Search user
 org.nightlabs.jfire.base.security.UserSearchComposite.name=Name
-org.nightlabs.jfire.base.security.UserSearchComposite.userID=UserID
-org.nightlabs.jfire.base.security.UserSearchComposite.userType=UserType
-org.nightlabs.jfire.base.security.UserSearchComposite.LoadingEvent=Loading Event
+org.nightlabs.jfire.base.security.UserSearchComposite.userID=User ID
+org.nightlabs.jfire.base.security.UserSearchComposite.userType=User type
+org.nightlabs.jfire.base.security.UserSearchComposite.LoadingEvent=Loading event
 
-org.nightlabs.jfire.base.security.UserTable.userID=UserID
+org.nightlabs.jfire.base.security.UserTable.userID=User ID
 org.nightlabs.jfire.base.security.UserTable.name=Name
 org.nightlabs.jfire.base.security.UserTable.description=Description
-org.nightlabs.jfire.base.security.UserTable.userType=UserType
-org.nightlabs.jfire.base.security.UserTable.changeDT=ChangeDT
+org.nightlabs.jfire.base.security.UserTable.userType=User type
+org.nightlabs.jfire.base.security.UserTable.changeDT=Change timestamp
 
-org.nightlabs.jfire.base.tree.ActiveTreeContentProvider.loadingNewJDOObjects=Loading New jdoObjects
-org.nightlabs.jfire.base.tree.ActiveTreeContentProvider.loadingChangedJDOObjects=Loading Changed jdoObjects
+org.nightlabs.jfire.base.tree.ActiveTreeContentProvider.loadingNewJDOObjects=Loading new JDO objects
+org.nightlabs.jfire.base.tree.ActiveTreeContentProvider.loadingChangedJDOObjects=Loading changed JDO objects
 org.nightlabs.jfire.base.tree.ActiveTreeContentProvider.loadingDataJob=Loading data...
 org.nightlabs.jfire.base.tree.ActiveTreeContentProvider.loadingData=Loading data...
 
-org.nightlabs.jfire.base.editlock.EditLockMan.jobName=Refresh EditLocks
+org.nightlabs.jfire.base.editlock.EditLockMan.jobName=Refresh edit locks
 org.nightlabs.jfire.base.editlock.EditLockTable.user=User
 org.nightlabs.jfire.base.editlock.EditLockTable.created=Created
-org.nightlabs.jfire.base.editlock.EditLockMan.aquireLockTask=Acquire EditLock on Server
-org.nightlabs.jfire.base.editlock.EditLockMan.releaseLockJob=Release EditLock
+org.nightlabs.jfire.base.editlock.EditLockMan.aquireLockTask=Acquire edit lock on Server
+org.nightlabs.jfire.base.editlock.EditLockMan.releaseLockJob=Release edit lock
 org.nightlabs.jfire.base.editlock.EditLockCarrierTable.description=Description
 org.nightlabs.jfire.base.editlock.EditLockCarrierTable.created=Created
-org.nightlabs.jfire.base.editlock.EditLockCarrierTable.lastActivity=Last User Activity
+org.nightlabs.jfire.base.editlock.EditLockCarrierTable.lastActivity=Last user activity
 org.nightlabs.jfire.base.editlock.EditLockCollisionWarningDialog.warningText=The object that you are about to edit is currently edited by someone else, too. This might cause collisions and changes to get lost.
 org.nightlabs.jfire.base.editlock.EditLockCollisionWarningDialog.loadingLabel=Loading data...
-org.nightlabs.jfire.base.editlock.EditLockCollisionWarningDialog.loadingJob=Loading EditLocks
-org.nightlabs.jfire.base.editlock.EditLockTable.lastAquired=Last Acquired
-org.nightlabs.jfire.base.editlock.EditLockAboutToExpireDueToUserInactivityDialog.locksToRelease=The following editLocks will be released because of user inactivity:
+org.nightlabs.jfire.base.editlock.EditLockCollisionWarningDialog.loadingJob=Loading edit locks
+org.nightlabs.jfire.base.editlock.EditLockTable.lastAquired=Last acquired
+org.nightlabs.jfire.base.editlock.EditLockAboutToExpireDueToUserInactivityDialog.locksToRelease=The following edit locks will be released because of user inactivity:
 
-org.nightlabs.jfire.base.jdo.ActiveJDOObjectController.loadingNewObjectsJob=Loading New jdoObjects
-org.nightlabs.jfire.base.jdo.ActiveJDOObjectController.loadingChangedObjectsJob=Loading Changed jdoObjects
-org.nightlabs.jfire.base.jdo.ActiveJDOObjectController.loadingDataJob=Loading Data
+org.nightlabs.jfire.base.jdo.ActiveJDOObjectController.loadingNewObjectsJob=Loading new JDO objects
+org.nightlabs.jfire.base.jdo.ActiveJDOObjectController.loadingChangedObjectsJob=Loading changed JDO objects
+org.nightlabs.jfire.base.jdo.ActiveJDOObjectController.loadingDataJob=Loading data
 
-org.nightlabs.jfire.base.jdo.JDOObjectDAO.gettingObjects=Getting %d Objects through Cache
+org.nightlabs.jfire.base.jdo.JDOObjectDAO.gettingObjects=Getting %d objects through cache
 
-org.nightlabs.jfire.base.jdo.notification.JDOLifecycleManagerRCP.notificationJob=Processing Notification
-org.nightlabs.jfire.base.jdo.notification.JDOLifecycleManagerRCP.lifecycleJob=Processing JDOLifecycle
+org.nightlabs.jfire.base.jdo.notification.JDOLifecycleManagerRCP.notificationJob=Processing notification
+org.nightlabs.jfire.base.jdo.notification.JDOLifecycleManagerRCP.lifecycleJob=Processing JDO lifecycle event
 
 org.nightlabs.jfire.base.jdo.tree.ActiveJDOObjectTreeController.loadingChanges=Loading changes ...
-org.nightlabs.jfire.base.jdo.tree.ActiveJDOObjectTreeController.loadingDataJob=Loading Data
+org.nightlabs.jfire.base.jdo.tree.ActiveJDOObjectTreeController.loadingDataJob=Loading data
 
 org.nightlabs.jfire.base.jdo.tree.JDOObjectTreeContentProvider.loading=Loading ...
 
@@ -138,9 +138,9 @@ org.nightlabs.jfire.base.jdo.tree.JDOObjectTreeContentProvider.loading=Loading .
 # 2007-08-21 Marco :-)
 
 
-org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.storeJob.name=Storing ConfigModule
+org.nightlabs.jfire.base.config.AbstractConfigModulePreferencePage.storeJob.name=Storing configuration module
 
-org.nightlabs.jfire.base.editlock.EditLockMan.acquireEditLockAsynchronously.job.name=Checking for EditLocks...
+org.nightlabs.jfire.base.editlock.EditLockMan.acquireEditLockAsynchronously.job.name=Checking for edit locks...
 
 org.nightlabs.jfire.base.j2ee.JMSQueueCombo.loadJob.name=Loading queues
 
@@ -148,7 +148,7 @@ org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.descriptionTableColumn.text=De
 org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.messagesTable.input_loading=loading ...
 org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.idTableColumn.text=ID
 org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.queueCombo.caption=Messages
-org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.loadJob.name=Loading Messages
+org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.loadJob.name=Loading messages
 org.nightlabs.jfire.base.j2ee.JMSQueueMessageList.summaryLabel.text=%d messages in queue
 
 org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_loggedIn=Logout
@@ -243,7 +243,7 @@ org.nightlabs.jfire.base.prop.edit.blockbased.RegexDataFieldEditor.invalidInputM
 org.nightlabs.jfire.base.prop.edit.blockbased.RegexDataFieldEditor.invalidInputMessageBox.text=Validation error
 org.nightlabs.jfire.base.prop.edit.blockbased.RegexDataFieldEditor.valueText.toolTipText=Regex: %s
 
-org.nightlabs.jfire.base.prop.edit.fieldbased.FieldBasedEditor.getPropStructure.monitor.taskName=Loading propertySet structure
+org.nightlabs.jfire.base.prop.edit.fieldbased.FieldBasedEditor.getPropStructure.monitor.taskName=Loading property set structure
 
 org.nightlabs.jfire.base.prop.structedit.I18nTextStructFieldEditor.lineCountLabel.text=Line count: 
 
@@ -258,16 +258,16 @@ org.nightlabs.jfire.base.prop.structedit.StructFieldCreationWizard.StructFieldTy
 
 org.nightlabs.jfire.base.prop.structedit.TextStructFieldEditor.lineCountLabel.text=Line count: 
 
-org.nightlabs.jfire.base.prop.structedit.action.RemoveStructElementAction.text=Delete the selected Block/Field
-org.nightlabs.jfire.base.prop.structedit.action.RemoveStructElementAction.toolTipText=Removes the currently selected Field/Block
+org.nightlabs.jfire.base.prop.structedit.action.RemoveStructElementAction.text=Delete the selected block/field
+org.nightlabs.jfire.base.prop.structedit.action.RemoveStructElementAction.toolTipText=Removes the currently selected field/block
 
-org.nightlabs.jfire.base.prop.structedit.action.AddStructBlockAction.text=Add a StructBlock
-org.nightlabs.jfire.base.prop.structedit.action.AddStructBlockAction.toolTipText=Add a new StructBlock
+org.nightlabs.jfire.base.prop.structedit.action.AddStructBlockAction.text=Add a structure block
+org.nightlabs.jfire.base.prop.structedit.action.AddStructBlockAction.toolTipText=Add a new structure block
 
-org.nightlabs.jfire.base.prop.structedit.action.AddStructFieldAction.text=Add a StructField
-org.nightlabs.jfire.base.prop.structedit.action.AddStructFieldAction.toolTipText=Add a new StructField to the currently selected StructBlock
+org.nightlabs.jfire.base.prop.structedit.action.AddStructFieldAction.text=Add a structure field
+org.nightlabs.jfire.base.prop.structedit.action.AddStructFieldAction.toolTipText=Add a new structure field to the currently selected structure block
 
 org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.text_up=Move element up
 org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.text_down=Move element down
-org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.toolTipText_up=Moves the selected Struct element one position up.
-org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.toolTipText_down=Moves the selected Struct element one position down.
+org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.toolTipText_up=Moves the selected structure element one position up.
+org.nightlabs.jfire.base.prop.structedit.action.MoveStructElementAction.toolTipText_down=Moves the selected structure element one position down.
