--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -63,7 +63,7 @@ org.nightlabs.jfire.base.login.LoginDialog.recentLoginsComboLabel=Recent Logins:
 org.nightlabs.jfire.base.login.LoginDialog.identityNameTextLabel=Identity Name: 
 
 # Arguments passed to LoginStateStatusLineContribution.loggedInStatus: 1:userID 2:organisationID 3:workstationID
-org.nightlabs.jfire.base.login.LoginStateStatusLineContribution.loggedInStatus=%1$s@%2$s on %3$s
+org.nightlabs.jfire.base.login.LoginStateStatusLineContribution.loggedInStatus=%1$s@%2$s (%3$s)
 org.nightlabs.jfire.base.login.LoginStateStatusLineContribution.loggedOutStatus=Logged out
 org.nightlabs.jfire.base.login.LoginStateStatusLineContribution.offlineStatus=Working offline
 
