field => field type
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8427 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -255,7 +255,7 @@ org.nightlabs.jfire.base.prop.structedit.StructEditorComposite.messageBoxStructM
 org.nightlabs.jfire.base.prop.structedit.StructEditorComposite.messageBoxStructModifiedSaveConfirmation.message=The current structure was modified. Save changes?
 
 org.nightlabs.jfire.base.prop.structedit.StructFieldCreationWizard.StructFieldTypePage.title=Select the type of the struct field\!
-org.nightlabs.jfire.base.prop.structedit.StructFieldCreationWizard.StructFieldTypePage.availableTypesLabel.text=Available struct fields:
+org.nightlabs.jfire.base.prop.structedit.StructFieldCreationWizard.StructFieldTypePage.availableTypesLabel.text=Available struct field types:
 
 org.nightlabs.jfire.base.prop.structedit.TextStructFieldEditor.lineCountLabel.text=Line count: 
 
