renamed key and value (it has nothing to do with events - probably copy'n'paste error)
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8428 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -75,8 +75,8 @@ org.nightlabs.jfire.base.security.UserSearchDialog.SearchUser=Search user
 org.nightlabs.jfire.base.security.UserSearchComposite.name=Name
 org.nightlabs.jfire.base.security.UserSearchComposite.userID=User ID
 org.nightlabs.jfire.base.security.UserSearchComposite.userType=User type
-org.nightlabs.jfire.base.security.UserSearchComposite.LoadingEvent=Loading event
-
+org.nightlabs.jfire.base.security.UserSearchComposite.input_loading=Loading users...
+org.nightlabs.jfire.base.security.UserSearchComposite.loadJob.name=Loading users
 org.nightlabs.jfire.base.security.UserTable.userID=User ID
 org.nightlabs.jfire.base.security.UserTable.name=Name
 org.nightlabs.jfire.base.security.UserTable.description=Description
