https://www.jfire.org/modules/bugs/view.php?id=242
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8430 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/plugin_de.properties
+++ b/plugin_de.properties
@@ -16,5 +16,5 @@ org.nightlabs.jfire.base.login.action.LoginAction.label=JFire &Anmeldung
 org.nightlabs.jfire.base.login.action.LoginAction.toolTip=JFire Anmeldung
 
 org.nightlabs.jfire.base.person.preferences.PersonManagementPreferencePage.name=Personenverwaltung
-org.nightlabs.jfire.base.person.preferences.PersonStructOrderPreferencePage.name=Struktur Anzeigereihenfolge
+org.nightlabs.jfire.base.person.preferences.PersonStructOrderPreferencePage.name=Struktur-Anzeigereihenfolge
 
