more refactorings for propertySet/person/legalentity search + externalisations
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8463 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages_de.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages_de.properties
@@ -92,14 +92,20 @@ org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_loggedOut  
 org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_offline                                    = Sie arbeiten gerade offline. Klicken Sie hier, um sich anzumelden.
 org.nightlabs.jfire.base.login.part.NeedLoginComposite.login                                                    = Anmelden
 org.nightlabs.jfire.base.login.part.NeedLoginComposite.loginToUseView                                           = Sie m\u00FCssen sich anmelden, um diese Sicht zu verwenden!
+org.nightlabs.jfire.base.login.splash.LoginSplashHandler.cancelButton.text                                      = Abbrechen
+org.nightlabs.jfire.base.login.splash.LoginSplashHandler.okButton.text                                          = OK
 org.nightlabs.jfire.base.organisation.OrganisationList.loadJob.name                                             = Lade Organisationen
 org.nightlabs.jfire.base.overview.DefaultCategoryComposite.iconTableColumn.text                                 = Piktogramm
 org.nightlabs.jfire.base.overview.DefaultCategoryComposite.nameTableColumn.text                                 = Text
 org.nightlabs.jfire.base.overview.OverviewRegistry.fallBackCategory.name                                        = Andere
 org.nightlabs.jfire.base.overview.search.AbstractQueryFilterComposite.activeButton.text                         = Aktiv
 org.nightlabs.jfire.base.overview.search.ApplySearchAction.text                                                 = Suche anwenden
+org.nightlabs.jfire.base.overview.search.BaseSearchEntryViewer.advancedEntry.name                               = Erweiterte Suche
 org.nightlabs.jfire.base.overview.search.BaseSearchEntryViewer.applySearch.listComposite_loading                = Lade Daten...
 org.nightlabs.jfire.base.overview.search.BaseSearchEntryViewer.job.name                                         = Lade Daten
+org.nightlabs.jfire.base.overview.search.SearchEntryViewer.limitLabel.text                                      = Ergebnissemenge limitieren (0 = unlimitiert)
+org.nightlabs.jfire.base.overview.search.SearchEntryViewer.searchCriteriaSection.text                           = Erweitert
+org.nightlabs.jfire.base.overview.search.SearchEntryViewer.searchLabel.text                                     = Suche
 org.nightlabs.jfire.base.overview.search.SpinnerSearchEntry.activeButton.text                                   = Aktiv
 org.nightlabs.jfire.base.person.edit.blockbased.special.PersonPersonalDataWizardPage.autoCreateDisplayName.text = Erzeuge Anzeigenamen f\u00FCr Personendaten automatisch.
 org.nightlabs.jfire.base.person.edit.blockbased.special.PersonPersonalDataWizardPage.displayName.caption        = Anzeigename
@@ -114,6 +120,10 @@ org.nightlabs.jfire.base.person.preferences.PersonStructOrderComposite.fieldUpBu
 org.nightlabs.jfire.base.person.preferences.PersonStructOrderComposite.structBlocksGroup.text                   = Stukturbl\u00F6cke
 org.nightlabs.jfire.base.person.preferences.PersonStructOrderComposite.structFieldsGroup.text                   = Strukturfelder
 org.nightlabs.jfire.base.person.preferences.PersonStructOrderComposite.titleLabel.text                          = Anzeigereihenfolge der Personenstruktur definieren
+org.nightlabs.jfire.base.person.search.PersonEditorWizardOtherPage.title                                        = Personeneigenschaften editieren
+org.nightlabs.jfire.base.person.search.PersonEditorWizardPersonalPage.title                                     = Personeneigenschaften editieren
+org.nightlabs.jfire.base.person.search.PersonSearchWizardPage.createNewButton.text                              = &Neue Person erzeugen
+org.nightlabs.jfire.base.person.search.PersonSearchWizardPage.title                                             = Person suchen
 org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProvider.searchButton.text                       = &Suchen
 org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.address.caption                = Adresse
 org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.city.caption                   = Stadt
@@ -123,6 +133,12 @@ org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite
 org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.phone.caption                  = Telefon
 org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.postcode.caption               = Postleitzahl
 org.nightlabs.jfire.base.person.search.StaticPersonSearchFilterProviderComposite.searchButton.text              = Suche
+org.nightlabs.jfire.base.prop.PropertySetSearchComposite.dynamicTab.text                                        = Erweiterte Suche
+org.nightlabs.jfire.base.prop.PropertySetSearchComposite.resultLabel.text                                       = Suchergebnisse
+org.nightlabs.jfire.base.prop.PropertySetSearchComposite.searchButton.text                                      = &Suche
+org.nightlabs.jfire.base.prop.PropertySetSearchComposite.searchJob.name                                         = Suche Gesch\u00E4ftspartner
+org.nightlabs.jfire.base.prop.PropertySetSearchComposite.staticTab.text                                         = Normale Suche
+org.nightlabs.jfire.base.prop.PropertySetSearchComposite.statusMessage.searching                                = Suche ...
 org.nightlabs.jfire.base.prop.edit.blockbased.AbstractBlockBasedEditor.getPropStructure.monitor.taskName        = Lade Eigenschaftssatz-Struktur
 org.nightlabs.jfire.base.prop.edit.blockbased.ExpandableBlocksEditor.getPropStructure.monitor.taskName          = Lade Eigenschaftssatz-Struktur
 org.nightlabs.jfire.base.prop.edit.blockbased.ImageDataFieldEditor.messageBoxImageExceedsMaxSizeKB.message      = Die Maximale Bildgr\u00F6\u00DFe ist %1$d KB.\n\nDie Gr\u00F6\u00DFe des ausgew\u00E4hlten Bildes betr\u00E4gt %2$d KB. Bitte w\u00E4hlen Sie ein kleineres Bild aus.
