- all login dialog stuff is back in the LoginDialog class - login dialog got a title image - all login config stuff is now in the details part - details part is split off in two groups - splash login stuff removed ... hope it works ;-)
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8548 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -68,6 +68,7 @@ org.nightlabs.jfire.base.login.LoginDialog.errormissingOrganisationID           
 org.nightlabs.jfire.base.login.LoginDialog.errormissingServerURL                                                = You must specify a server URL.
 org.nightlabs.jfire.base.login.LoginDialog.errormissingUserID                                                   = You must specify an username.
 org.nightlabs.jfire.base.login.LoginDialog.errormissingWorkstationID                                            = You must specify a workstation
+org.nightlabs.jfire.base.login.LoginDialog.extendedSettingsGroupText=Extended Settings
 org.nightlabs.jfire.base.login.LoginDialog.identityNameTextLabel                                                = Identity Name: 
 org.nightlabs.jfire.base.login.LoginDialog.labelbutton.login                                                    = &Login
 org.nightlabs.jfire.base.login.LoginDialog.labelbutton.offline                                                  = Work &offline
@@ -80,9 +81,11 @@ org.nightlabs.jfire.base.login.LoginDialog.labelserverURL                       
 org.nightlabs.jfire.base.login.LoginDialog.labeluser                                                            = Username: 
 org.nightlabs.jfire.base.login.LoginDialog.labelworkstation                                                     = Workstation: 
 org.nightlabs.jfire.base.login.LoginDialog.loginConfigurationAlreadyExists                                      = A login configuration with the given name already exists and will be overridden.
+org.nightlabs.jfire.base.login.LoginDialog.loginConfigGroupText=Login Identities
 org.nightlabs.jfire.base.login.LoginDialog.recentLoginsComboLabel                                               = Recent Logins: 
 org.nightlabs.jfire.base.login.LoginDialog.titleAreaMessage                                                     = Enter your user data and press login - or choose to work offline.
 org.nightlabs.jfire.base.login.LoginDialog.titleAreaTitle                                                       = Please login
+org.nightlabs.jfire.base.login.LoginDialog.notBoundError=The server could be reached, but JFire is not yet available. Please try again later.
 org.nightlabs.jfire.base.login.LoginDialog.tryingLogin                                                          = Trying to login...
 org.nightlabs.jfire.base.login.LoginDialog.validNameMissingErrorMessage                                         = You must specify a name if you want to save the login configuration.
 # Arguments passed to LoginStateStatusLineContribution.loggedInStatus: 1:userID 2:organisationID 3:workstationID
