* org.nightlabs.jfire.base   - fixed l10n * org.nightlabs.jfire.trade   - removed unnecessary double assignment
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@8609 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/base/resource/messages_de.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages_de.properties
@@ -55,6 +55,7 @@ org.nightlabs.jfire.base.login.Login.authenticationJob                          
 org.nightlabs.jfire.base.login.Login.errorUnhandledExceptionMessage                                             = W\u00E4hrend der Anmeldung trat ein Fehler auf.
 org.nightlabs.jfire.base.login.Login.rebootDialogMessage                                                        = Ihre Klassenlader-Konfiguration wurde ge\u00E4ndert um alle auf dem Server ver\u00F6ffentlichten Klassen verf\u00FCgbar zu machen. Ein Neustart ist notwendig.
 org.nightlabs.jfire.base.login.Login.rebootDialogTitle                                                          = Neustart notwendig
+org.nightlabs.jfire.base.login.LoginComposite.loginTask.name                                                    = Anmeldung
 org.nightlabs.jfire.base.login.LoginDialog.authentication                                                       = Anmeldung...
 org.nightlabs.jfire.base.login.LoginDialog.currentIdentityMarker                                                = [Letzte Anmeldung]
 org.nightlabs.jfire.base.login.LoginDialog.deleteButtonLabel                                                    = L\u00F6schen
@@ -67,6 +68,7 @@ org.nightlabs.jfire.base.login.LoginDialog.errormissingOrganisationID           
 org.nightlabs.jfire.base.login.LoginDialog.errormissingServerURL                                                = Geben Sie eine Server-URL an.
 org.nightlabs.jfire.base.login.LoginDialog.errormissingUserID                                                   = Geben Sie einen Benutzernamen an.
 org.nightlabs.jfire.base.login.LoginDialog.errormissingWorkstationID                                            = Bitte geben Sie einen Arbeitsplatz an.
+org.nightlabs.jfire.base.login.LoginDialog.extendedSettingsGroupText                                            = Erweitert
 org.nightlabs.jfire.base.login.LoginDialog.identityNameTextLabel                                                = Name der Identit\u00E4t: 
 org.nightlabs.jfire.base.login.LoginDialog.labelbutton.login                                                    = &Anmelden
 org.nightlabs.jfire.base.login.LoginDialog.labelbutton.offline                                                  = &Offline arbeiten
@@ -78,7 +80,9 @@ org.nightlabs.jfire.base.login.LoginDialog.labelsaveSettings                    
 org.nightlabs.jfire.base.login.LoginDialog.labelserverURL                                                       = Server URL: 
 org.nightlabs.jfire.base.login.LoginDialog.labeluser                                                            = Benutzername: 
 org.nightlabs.jfire.base.login.LoginDialog.labelworkstation                                                     = Arbeitsplatz: 
+org.nightlabs.jfire.base.login.LoginDialog.loginConfigGroupText                                                 = Identit\u00E4ten
 org.nightlabs.jfire.base.login.LoginDialog.loginConfigurationAlreadyExists                                      = Eine Anmeldekonfiguration mit diesem Namen existiert bereits und wird \u00FCberschrieben.
+org.nightlabs.jfire.base.login.LoginDialog.notBoundError                                                        = Der Server konnte erreicht werden, aber JFire ist noch nicht verf\u00FCgbar. Bitte versuchen Sie es sp\u00E4ter nochmal.
 org.nightlabs.jfire.base.login.LoginDialog.recentLoginsComboLabel                                               = Letzte Anmeldungen: 
 org.nightlabs.jfire.base.login.LoginDialog.titleAreaMessage                                                     = Geben Sie Ihre Benutzerdaten ein und klicken sie auf "Anmelden" oder arbeiten Sie offline.
 org.nightlabs.jfire.base.login.LoginDialog.titleAreaTitle                                                       = Bitte melden Sie sich an
@@ -92,8 +96,6 @@ org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_loggedOut  
 org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_offline                                    = Sie arbeiten gerade offline. Klicken Sie hier, um sich anzumelden.
 org.nightlabs.jfire.base.login.part.NeedLoginComposite.login                                                    = Anmelden
 org.nightlabs.jfire.base.login.part.NeedLoginComposite.loginToUseView                                           = Sie m\u00FCssen sich anmelden, um diese Sicht zu verwenden!
-org.nightlabs.jfire.base.login.splash.LoginSplashHandler.cancelButton.text                                      = Abbrechen
-org.nightlabs.jfire.base.login.splash.LoginSplashHandler.okButton.text                                          = OK
 org.nightlabs.jfire.base.organisation.OrganisationList.loadJob.name                                             = Lade Organisationen
 org.nightlabs.jfire.base.overview.DefaultCategoryComposite.iconTableColumn.text                                 = Piktogramm
 org.nightlabs.jfire.base.overview.DefaultCategoryComposite.nameTableColumn.text                                 = Text
