--- a/src/org/nightlabs/jfire/base/resource/messages.properties
+++ b/src/org/nightlabs/jfire/base/resource/messages.properties
@@ -68,7 +68,7 @@ org.nightlabs.jfire.base.login.LoginDialog.errormissingOrganisationID           
 org.nightlabs.jfire.base.login.LoginDialog.errormissingServerURL                                                = You must specify a server URL.
 org.nightlabs.jfire.base.login.LoginDialog.errormissingUserID                                                   = You must specify an username.
 org.nightlabs.jfire.base.login.LoginDialog.errormissingWorkstationID                                            = You must specify a workstation
-org.nightlabs.jfire.base.login.LoginDialog.extendedSettingsGroupText=Extended Settings
+org.nightlabs.jfire.base.login.LoginDialog.extendedSettingsGroupText                                            = Extended Settings
 org.nightlabs.jfire.base.login.LoginDialog.identityNameTextLabel                                                = Identity Name: 
 org.nightlabs.jfire.base.login.LoginDialog.labelbutton.login                                                    = &Login
 org.nightlabs.jfire.base.login.LoginDialog.labelbutton.offline                                                  = Work &offline
@@ -80,12 +80,12 @@ org.nightlabs.jfire.base.login.LoginDialog.labelsaveSettings                    
 org.nightlabs.jfire.base.login.LoginDialog.labelserverURL                                                       = Server URL: 
 org.nightlabs.jfire.base.login.LoginDialog.labeluser                                                            = Username: 
 org.nightlabs.jfire.base.login.LoginDialog.labelworkstation                                                     = Workstation: 
+org.nightlabs.jfire.base.login.LoginDialog.loginConfigGroupText                                                 = Login identities
 org.nightlabs.jfire.base.login.LoginDialog.loginConfigurationAlreadyExists                                      = A login configuration with the given name already exists and will be overridden.
-org.nightlabs.jfire.base.login.LoginDialog.loginConfigGroupText=Login Identities
+org.nightlabs.jfire.base.login.LoginDialog.notBoundError                                                        = The server could be reached, but JFire is not yet available. Please try again later.
 org.nightlabs.jfire.base.login.LoginDialog.recentLoginsComboLabel                                               = Recent Logins: 
 org.nightlabs.jfire.base.login.LoginDialog.titleAreaMessage                                                     = Enter your user data and press login - or choose to work offline.
 org.nightlabs.jfire.base.login.LoginDialog.titleAreaTitle                                                       = Please login
-org.nightlabs.jfire.base.login.LoginDialog.notBoundError=The server could be reached, but JFire is not yet available. Please try again later.
 org.nightlabs.jfire.base.login.LoginDialog.tryingLogin                                                          = Trying to login...
 org.nightlabs.jfire.base.login.LoginDialog.validNameMissingErrorMessage                                         = You must specify a name if you want to save the login configuration.
 # Arguments passed to LoginStateStatusLineContribution.loggedInStatus: 1:userID 2:organisationID 3:workstationID
@@ -97,8 +97,6 @@ org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_loggedOut  
 org.nightlabs.jfire.base.login.action.LoginAction.action.toolTipText_offline                                    = You are currently working offline. Click here to login.
 org.nightlabs.jfire.base.login.part.NeedLoginComposite.login                                                    = Login
 org.nightlabs.jfire.base.login.part.NeedLoginComposite.loginToUseView                                           = You need to login to use this view!
-org.nightlabs.jfire.base.login.splash.LoginSplashHandler.cancelButton.text                                      = Cancel
-org.nightlabs.jfire.base.login.splash.LoginSplashHandler.okButton.text                                          = OK
 org.nightlabs.jfire.base.organisation.OrganisationList.loadJob.name                                             = Load Organisations
 org.nightlabs.jfire.base.overview.DefaultCategoryComposite.iconTableColumn.text                                 = Icon
 org.nightlabs.jfire.base.overview.DefaultCategoryComposite.nameTableColumn.text                                 = Text
