added RexDataFieldExpression used for email validation.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@16362 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/person/resource/messages.properties
+++ b/src/org/nightlabs/jfire/person/resource/messages.properties
@@ -1,3 +1,4 @@
 org.nightlabs.jfire.person.PersonStruct.NameValidationError=You must at least enter name and firstname or a company.
 org.nightlabs.jfire.person.PersonStruct.SalutationNeededValidationError=You must select a salutation.
 org.nightlabs.jfire.person.PersonStruct.SalutationNotNeededValidationError=You have set a salutation but no name.
+org.nightlabs.jfire.person.PersonStruct.EmailValidationWarning=You have set a wrong email pattern.
