Fixed a lot of unnecessary warnings.
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.jfire.base@16620 18c61ebf-f106-0410-9e1e-81fb82415b8f

--- a/src/org/nightlabs/jfire/person/resource/messages_de.properties
+++ b/src/org/nightlabs/jfire/person/resource/messages_de.properties
@@ -1,3 +1,4 @@
 org.nightlabs.jfire.person.PersonStruct.NameValidationError=Sie müssen Name und Vorname oder eine Firma angeben.
 org.nightlabs.jfire.person.PersonStruct.SalutationNeededValidationError=Sie müssen eine Anrede auswählen.
 org.nightlabs.jfire.person.PersonStruct.SalutationNotNeededValidationError=Sie haben eine Anrede ausgewählt aber keinen Namen.
+org.nightlabs.jfire.person.PersonStruct.EmailValidationWarning=Sie haben eine ungültige E-Mail-Adresse angegeben.
