--- a/src/org/nightlabs/jfire/person/resource/messages.properties
+++ b/src/org/nightlabs/jfire/person/resource/messages.properties
@@ -1,4 +1,4 @@
 org.nightlabs.jfire.person.PersonStruct.NameValidationError=You must at least enter name and firstname or a company.
 org.nightlabs.jfire.person.PersonStruct.SalutationNeededValidationError=You must select a salutation.
 org.nightlabs.jfire.person.PersonStruct.SalutationNotNeededValidationError=You have set a salutation but no name.
-org.nightlabs.jfire.person.PersonStruct.EmailValidationWarning=You have set a wrong email pattern.
+org.nightlabs.jfire.person.PersonStruct.EmailValidationWarning=You have set an invalid email address.
